# probs-runner

./: .buildinfo  .gitignore  DEVELOPING.md  README.md  api.html  genindex.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
docs/: _config.yml  _toc.yml  api.rst  intro.md
src/probs_runner/: __init__.py  cli.py  datasource.py  runners.py
tests/: README.md  conftest.py  test_datasource.py  test_probs_runner.py
tests/sample_datasource_simple/: load_data.rdfox
