[metadata]
name = probs_runner
version = 1.0.0
description = Tools to run the PRObs ontology scripts with RDFox
author = Rick Lupton, Stefano Germano
author-email = mail@ricklupton.name
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/ukfires/probs-runner
platforms = any

[options]
packages = probs_runner
package_dir=
    =src
include_package_data = True
install_requires =
  importlib_resources; python_version < "3.9"
  rdfox_runner
  pandas
  click >= 8.0

[options.entry_points]
console_scripts =
    probs-runner = probs_runner.cli:cli

[bdist_wheel]
universal=1

[options.extras_require]
test=
  pytest
  probs_ontology
docs=
  jupyter-book >=0.10,<0.11
  # These specific versions needed to resolve version conflicts -- can probably be
  # updated later when updating
  # jupyter-book/jupytext/markdown-it-py/mdit-py-plugins all together
  markdown-it-py ~=0.6.2
  mdit-py-plugins ==0.2.5
